<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.twomonth.calculatedemo.viewmodel.MyViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoseFragment">


        <ImageView
            android:id="@+id/imageView_cry"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_kulian"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cry" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textView_lose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/you_lose"
            android:textSize="@dimen/text30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline14" />

        <TextView
            android:id="@+id/textView_lose_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/max(data.hightScore)}"
            android:textSize="@dimen/text30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_lose" />

        <Button
            android:id="@+id/button_lose_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_entry"
            android:text="@string/lose_back"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline14"
            app:layout_constraintVertical_bias="0.684" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>